2024-05-16
  H-2 Seasprite
    - Add pylon 5 and rescue equipment
2024-05-15
  CVA-31 Bon Homme Richard
    - Fix cat 1 smoke effect problem
  H-2 Seasprite
    - Revert copy table
    - Add drop tanks
    - Add statics, but comment due to positioning
2024-05-10
  CVA-31 Bon Homme Richard
    - Overhaul 36 plane layout by Beldin
    - Enable meatball for experiments
    - Add dirty deck texture
  F-8 Crusader
    - Updated and improved collision shell and main model
    - Fix icon color
    - Add launchbar support (broken without EFM)
    - Remove light when launching
    - Change main menu name to F-8 Crusader (from crusader)
  MiG-17F "Fresco-C"
    - New icon
    - Add wikipedia based info
    - Change main menu name to MiG-17F (from mig17f)
  Maddox
    - New livery DD-692 Sumner
  H-2 Seasprite
    - Initial Release
2024-04-23
  CVA-31 Bon Homme Richard
    - Add black waterline and red submerged colored hull
  F-8 Crusader
    - Update collision shell
  MiG-17F "Fresco-C"
    - Update collision shell
    - Fix floating wheels
2024-04-18
  CVA-31 Bon Homme Richard
    - Add number free variant 'CV Essex Class SCB-125'
    - Provide liveries for different Essex Class carriers, kudos seabat
    - Add 24 and 36 plane deck layouts, kudos Beldin
  F-8 Crusader
    - Fix Cockpit, now visible again
  MiG-17F "Fresco-C"
    - Provide new liveries, kudos seabat
  Maddox
    - New armament system, based on currenthill's work, and Beldin
2024-04-12
  CVA-31 Bon Homme Richard
    - Use a differential approach to the generic Essex lua definition
    - Provide Beldin's routes and runways file as alternative
2024-04-08
  F-8 Crusader
    - Use new collision shell and damage table
  MiG-17F "Fresco-C"
    - Use new collision shell and damage table
  CVA-31 Bon Homme Richard
    - Provide a generic Essex class carrier with SCB-125 Angled Deck upgrade
    - Sample number 14 added, but only as a test
2024-04-03
  PBR MkII Patrol Boat
    - Add 5km lod
  Maddox 