@@ -1,6 +1,8 @@
 2024-05-16
   H-2 Seasprite
     - Add pylon 5 and rescue equipment
+  F-8 Crusader
+    - Update collision shell
 2024-05-15
   CVA-31 Bon Homme Richard
     - Fix cat 1 smoke effect problem
